--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="box1">Better</div>
     <div class="box2">Best</div>
  </div>
+ <section>
+    
+ </section>
     </section>
    
 </body>
