--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="box2">Best</div>
  </div>
  <section>
-    
+    <div>
+        hii
+        
+    </div>
  </section>
     </section>
    
